Finished comments Task 3

--- a/project/Introduction-Data-Science-Task-3.ipynb
+++ b/project/Introduction-Data-Science-Task-3.ipynb
@@ -3855,7 +3855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3976,6 +3976,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nach Anwendung von `RFECV` verbleiben alle verfügbaren Features im Modell.\n",
+    "\n",
+    "Zudem visualisieren wir die Bedeutung der einzelnen Features im Modell. Es ist schnell ersichtlich, dass `price reduction` und `season_2` nahezu keine Bedeutung haben."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 117,
    "metadata": {},
@@ -4014,6 +4023,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun evaluieren wir wieder das Modell unter Verwendung der festgelegten Werte für die Hyperparameter und der mittels `RFECV` bestimmten Features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
@@ -4021,6 +4037,13 @@
    "source": [
     "X_train_no_selected = X_train_no[recursive_feature_elimination.get_feature_names_out().tolist()]\n",
     "X_validate_no_selected = X_validate_no[recursive_feature_elimination.get_feature_names_out().tolist()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir entfernen zusätzlich die beiden Features `price reduction` und `season_2`, die kaum Bedeutung für das Modell haben. Durch diesen Schritt konnte die Performance weiter verbessert werden."
    ]
   },
   {
@@ -4124,6 +4147,13 @@
    ],
    "source": [
     "plot_rfecv_feature_ranking(X_train_no.columns, recursive_feature_elimination.ranking_, recursive_feature_elimination.support_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Grafik zeigt auf, dass nach Anwendung der Backward Elimination keines der Features entfernt wurde."
    ]
   },
   {
@@ -4301,6 +4331,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nach Anwendung von `RFECV` verbleiben ebenfalls alle verfügbaren Features im Modell.\n",
+    "\n",
+    "Durch die Visualisierung der Bedeutung der einzelnen Features im Modell sehen wir jedoch schnell, dass `price reduction` und `leaflets` nahezu keine Bedeutung haben. Diese beiden Features werden wir im folgenden Schritt entfernen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 128,
    "metadata": {},
@@ -4339,6 +4378,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun evaluieren wir wieder das Modell unter Verwendung der festgelegten Werte für die Hyperparameter und der mittels `RFECV` bestimmten Features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 129,
    "metadata": {},
@@ -4346,6 +4392,13 @@
    "source": [
     "X_train_no_selected = X_train_no[recursive_feature_elimination.get_feature_names_out().tolist()]\n",
     "X_validate_no_selected = X_validate_no[recursive_feature_elimination.get_feature_names_out().tolist()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir entfernen nun die Features `price reduction` und `leaflets`."
    ]
   },
   {
@@ -4449,6 +4502,13 @@
    ],
    "source": [
     "plot_rfecv_feature_ranking(X_train_no, recursive_feature_elimination.ranking_, recursive_feature_elimination.support_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Grafik zeigt auf, dass nach Anwendung der Backward Elimination keines der Features entfernt wurde."
    ]
   },
   {
@@ -4593,7 +4653,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nach Anwendung von `RFECV` verbleiben die aufgeführen Features im Modell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun evaluieren wir wieder das Modell unter Verwendung der festgelegten Werte für die Hyperparameter und der mittels `RFECV` bestimmten Features."
    ]
   },
   {
@@ -4697,6 +4771,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Grafik zeigt wieder auf, in welcher Iteration welches Feature aus dem Modell entfernt wurde."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im folgenden Diagramm ist erneut die Bedeutung der einzelnen verbleibenden Features für das Modell ersichtlich."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 146,
    "metadata": {},
@@ -4728,6 +4816,17 @@
    "metadata": {},
    "source": [
     "## 5.1 Ergebnisse nach dem Hyperparameter Tuning:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In der folgenden Darstelllung sind die Performance Measures für alle Modelle nach dem Schritt des Hyperparameter Tunings ersichtlich. \n",
+    "\n",
+    "Auffällig ist, dass die Modelle, die mit Daten trainiert und evaluiert wurden, die um Ausreißer bereinigt wurden, deutlich besser abschneiden.\n",
+    "\n",
+    "Die besten Performance bietet der `GradientBoostingRegressor`."
    ]
   },
   {
@@ -4843,6 +4942,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In der folgenden Darstelllung sind die Performance Measures für alle Modelle nach dem Schritt der Feature Selection aufgeführt.\n",
+    "\n",
+    "Die besten Performance weist erneut der `GradientBoostingRegressor` auf."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 149,
    "metadata": {},
@@ -4955,6 +5063,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Für das finale Modell wählen wir aufgrund der Performance Measures den `GradientBoostingRegressor`.\n",
+    "\n",
+    "Im Folgenden wird das Modell mit Hilfe der Testdaten evaluiert."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 151,
    "metadata": {},
@@ -4962,6 +5079,18 @@
    "source": [
     "test_data_no_preprocessed = preprocessing_pipeline.fit_transform(test_data_no)\n",
     "train_data_no_preprocessed = preprocessing_pipeline.fit_transform(train_data_no)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir verwenden die folgenden Werte für die vier Hyperparameter:\n",
+    "\n",
+    "- **learning_rate**: Die Lernrate wird auf `0,01` festgelegt.\n",
+    "- **max_depth**: Die maximale Tiefe eines einzelnen Entscheidungsbaums beträgt `3`.\n",
+    "- **min_samples_split**: Die minimale Anzahl von erforderlichen Beispielen, um einen Knoten im Entscheidungsbaum zu teilen beträgt `4`.\n",
+    "- **n_estimators**: Die Anzahl der Bäume im Ensemble beträgt `900`."
    ]
   },
   {
@@ -5019,6 +5148,13 @@
    "source": [
     "test_data_no_selected = test_data_no_preprocessed[recursive_feature_elimination.get_feature_names_out().tolist()]\n",
     "train_data_no_selected = train_data_no_preprocessed[recursive_feature_elimination.get_feature_names_out().tolist()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir entfernen lediglich die beiden Features `price reduction` und `season_2`aus dem Modell. Alle anderen verfügbaren Features werden genutzt."
    ]
   },
   {
@@ -5084,6 +5220,18 @@
    ],
    "source": [
     "measures = performance_measures(test_data_no['cnt'], y_pred, len(gradient_boosting_regressor.feature_importances_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Performance Measures zeigen, dass das finale Modell eine relativ hohe Erklärungskraft hat \n",
+    "\n",
+    "- **R-Squared**: Der Wert von 0,86 bedeutet, dass das Modell etwa 86% der Varianz in den Zielvariablen erklärt.\n",
+    "- **Adjusted R-Squared**: Der Wert von 0,85 deutet darauf hin, dass das Modell auch unter Berücksichtigung der Anzahl der verwendeten Merkmale gut abschneidet. Das Maß Adjusted R-Squared berücksichtigt die Anzahl der verwendeten Features und korrigiert R-Squared entsprechend.\n",
+    "- **MAE**: Der Wert von 542,42 deutet darauf hin, dass die durchschnittliche Abweichung zwischen Vorhersagen und tatsächlichen Werten etwa 542 Fahrräder beträgt.\n",
+    "- **RMSE**: Der Wert von 727,84 bedeutet, dass der durchschnittliche quadratische Fehler etwa 727 Fahrräder beträgt."
    ]
   },
   {
