Update comments Task 3

--- a/project/Introduction-Data-Science-Task-3.ipynb
+++ b/project/Introduction-Data-Science-Task-3.ipynb
@@ -5089,7 +5089,7 @@
     "\n",
     "- **learning_rate**: Die Lernrate wird auf `0,01` festgelegt.\n",
     "- **max_depth**: Die maximale Tiefe eines einzelnen Entscheidungsbaums beträgt `3`.\n",
-    "- **min_samples_split**: Die minimale Anzahl von erforderlichen Beispielen, um einen Knoten im Entscheidungsbaum zu teilen beträgt `4`.\n",
+    "- **min_samples_split**: Die minimale Anzahl von erforderlichen Beispielen, um einen Knoten im Entscheidungsbaum zu teilen, beträgt `4`.\n",
     "- **n_estimators**: Die Anzahl der Bäume im Ensemble beträgt `900`."
    ]
   },
@@ -5231,7 +5231,7 @@
     "- **R-Squared**: Der Wert von 0,86 bedeutet, dass das Modell etwa 86% der Varianz in den Zielvariablen erklärt.\n",
     "- **Adjusted R-Squared**: Der Wert von 0,85 deutet darauf hin, dass das Modell auch unter Berücksichtigung der Anzahl der verwendeten Merkmale gut abschneidet. Das Maß Adjusted R-Squared berücksichtigt die Anzahl der verwendeten Features und korrigiert R-Squared entsprechend.\n",
     "- **MAE**: Der Wert von 542,42 deutet darauf hin, dass die durchschnittliche Abweichung zwischen Vorhersagen und tatsächlichen Werten etwa 542 Fahrräder beträgt.\n",
-    "- **RMSE**: Der Wert von 727,84 bedeutet, dass der durchschnittliche quadratische Fehler etwa 727 Fahrräder beträgt."
+    "- **RMSE**: Der Wert von 727,84 bedeutet, dass der durchschnittliche quadratische Fehler etwa 728 Fahrräder beträgt."
    ]
   },
   {
