Updated comments Task 2

--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Desweiteren definieren wir Funktionen zur Visualisierung der Performance unserer Modelle.\n",
+    "Desweiteren definieren wir Funktionen zur Ausgabe und zur Visualisierung der Performance unserer Modelle.\n",
     "Als Kriterien für die Performancemessung nutzen wir `R²`, `Adjusted R²`, `MAE` sowie `RMSE`. "
    ]
   },
@@ -230,13 +230,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Helpers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Split Data"
    ]
   },
@@ -244,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Damit wir die entsprechende Jahreszeit anhand des Datums bestimmen können, müssen wir die Werte der Spalte `dteday` zuvor in `datetime` Objekte umwandeln."
+    "Um später die entsprechende Jahreszeit anhand des Datums bestimmen zu können, müssen wir die Werte der Spalte `dteday` zuvor in `datetime` Objekte umwandeln. Diese Transformation werden wir bereits vor dem Splitting durchführen."
    ]
   },
   {
@@ -306,6 +299,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir transformieren die Werte in der Spalte `dteday`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -328,17 +328,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir splitten die ```train_data``` nochmals in `train` und `validate`, sodass wir unsere Modelle im weiteren Verlauf unabhängig von den Testdaten valdieren können."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Denkbar split auf Zeitlicher Basis -> weil 2 Jahre\n",
-    "- e.g. 18 Monate Training 6 Monate Test\n",
+    "Wir splitten die ```train_data``` nochmals in `train` und `validate`, sodass wir unsere Modelle im weiteren Verlauf unabhängig von den Testdaten valdieren können.\n",
     "\n",
-    "- durch 'yr' ist Jahrinformation encoded -> random split"
+    "Denkbar wäre hier auch ein Split auf zeitlicher Basis gewesen. Wir wissen, dass da vorliegende Datenset die Daten aus zwei Jahren beinhaltet. Man könnte beispielsweise 18 Monate als Trainingsdaten und die verbleibenden 6 Monate als Testdaten nutzen.\n",
+    "Da die Information über das Jahr aber bereits im Feature `year` enthalten ist, verzichten wir auf diese Art des Splitts und nehmen einen Random Split vor."
    ]
   },
   {
@@ -361,25 +354,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO:\n",
-    "Outlier sind ein Bestandteil realer Daten. \n",
-    "- Linear Regression eignet sich nicht bei Outlier\n",
-    "- Wenn Outlier realistisch sind muss das Modell entsprechend ausgesucht werden, dass es robust dagegen ist.\n",
-    "- Domain Wissen notwendig.\n",
-    "- In unserem Fall unrealistische Anzahl von cnt.\n",
-    "- Wir wollen dennoch die Evaluierung nutzen um die zu zeigen, am ende wird das Modell ohne Outlier evaluiert um die Auswirkung zu zeigen. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Bei Ausreißern im Label eignet sich lineare Regression nur bedingt. Sind die Werte dennoch realistisch, sollte das Modell entsprechend ausgewählt werden, sodass es möglichst robust im Hinblick auf die Ausreißer ist. \n",
+    "Bei Ausreißern im Label eignet sich die lineare Regression nur bedingt. Sind die Werte dennoch realistisch, sollte das Modell entsprechend ausgewählt werden, sodass es möglichst robust im Hinblick auf die Ausreißer ist. \n",
     "Hierfür ist zwingend Domänenwissen notwendig. In unserem Fall handelt es sich definitiv um unrealistische Werte für die Variable cnt. Bereits in Task 1 konnten wir die Ausreißer identifizieren.\n",
     "Da wir in den Test- und Validierungsdaten keine Ausreißer entfernen dürfen, werden wir sie für die weiteren Schritte auch nicht aus den Trainingsdaten entfernen.\n",
-    "Erst im letzten Schritt, der finalen Evaluierung mit Hilfe der Testdaten, werden wir das Modell einmal komplett ohne Ausreißer evaluieren, um die Auswirkungen aufzuzeigen.\n",
-    "\n",
-    "Wir entfernen nun für die Trainings- und Testdaten die Ausreißer und speichern sie in den Variablen test_data_no und train_data_no."
+    "Erst im letzten Schritt, der finalen Evaluierung mit Hilfe der Testdaten, werden wir das Modell einmal komplett ohne Ausreißer evaluieren, um die Auswirkungen aufzuzeigen."
    ]
   },
   {
@@ -387,6 +365,13 @@
    "metadata": {},
    "source": [
     "### Helpers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir definieren nun den Transformer `OutlierRemover`, um die Ausreißer auf Basis der `Z-Score` Methode zu identifizieren und zu entfernen."
    ]
   },
   {
@@ -451,6 +436,13 @@
    "metadata": {},
    "source": [
     "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir wenden den zuvor definierten Transformer auf die Trainings- und Testdaten an und speichern die um Ausreißer bereinigten Daten in den Variablen `test_data_no` und `train_data_no`."
    ]
   },
   {
@@ -789,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die beiden Teilschritte werden im Folgenden der bestehenden Pipeline hinzugefügt."
+    "Die der Teilschritt wird im Folgenden der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
@@ -1035,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die folgenden Custom Transformer können die fehlerhaften Werte entweder entfernen oder duch den Mittelwert ersetzen."
+    "Der folgende Custom Transformer kann die fehlerhaften Werte duch den Mittelwert ersetzen."
    ]
   },
   {
@@ -1327,7 +1319,7 @@
     "\n",
     "Desweiteren werden die ursprünglichen drei Spalten `weekday`, `season` und `weathersit` entfernt.\n",
     "\n",
-    "Wir definieren zur Durchführung dieser Teilschritte folgenden Transformer:"
+    "Wir definieren zur Durchführung dieser Teilschritte folgende Transformer:"
    ]
   },
   {
@@ -2195,7 +2187,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Performance Measures zeigen eine moderate Performance unseres Modells an."
+    "Die Performance Measures zeigen eine moderate Performance unseres Modells an.\n",
+    "\n",
+    "- **R-Squared**: Der Wert von 0,42 bedeutet, dass das Modell etwa 42% der Varianz in den Zielvariablen erklärt.\n",
+    "- **Adjusted R-Squared**: Der Wert von 0,34 deutet darauf hin, dass das Modell auch unter Berücksichtigung der Anzahl der verwendeten Merkmale weniger gut abschneidet. \n",
+    "- **MAE**: Der Wert von 970,58 deutet darauf hin, dass die durchschnittliche Abweichung zwischen Vorhersagen und tatsächlichen Werten etwa 971 Fahrräder beträgt.\n",
+    "- **RMSE**: Der Wert von 2.366,38 bedeutet, dass der durchschnittliche quadratische Fehler etwa 2.366 Fahrräder beträgt."
    ]
   },
   {
@@ -2413,6 +2410,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Performance Measures zeigen eine deutlich bessere Performance unseres Modells.\n",
+    "\n",
+    "- **R-Squared**: Der Wert von 0,80 bedeutet, dass das Modell etwa 80% der Varianz in den Zielvariablen erklärt.\n",
+    "- **Adjusted R-Squared**: Der Wert von 0,78 deutet darauf hin, dass das Modell auch unter Berücksichtigung der Anzahl der verwendeten Merkmale gut abschneidet. \n",
+    "- **MAE**: Der Wert von 637,31 deutet darauf hin, dass die durchschnittliche Abweichung zwischen Vorhersagen und tatsächlichen Werten etwa 637 Fahrräder beträgt.\n",
+    "- **RMSE**: Der Wert von 864,4 bedeutet, dass der durchschnittliche quadratische Fehler etwa 864 Fahrräder beträgt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
@@ -2461,7 +2470,7 @@
    "source": [
     "Abschließend ist aus den folgenden Diagrammen ersichtlich, wie sich die Performance Measures im Laufe des Data Preparation Prozesses verbessert haben. \n",
     "\n",
-    "Während die Werte für RMSE und MAE reduziert wurden, haben die Werte für R-Squared sowie Adjusted R-Squared zugenommen."
+    "Während die Werte für `RMSE` und `MAE` reduziert wurden, haben die Werte für `R-Squared` sowie `Adjusted R-Squared` zugenommen."
    ]
   },
   {
@@ -2504,7 +2513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Daten werden abschließend exportiert."
+    "Die Daten und das finale Modell werden abschließend exportiert."
    ]
   },
   {
