--- a/project/Introduction-Data-Science-Task-1.ipynb
+++ b/project/Introduction-Data-Science-Task-1.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Das vorliegende Datenset beinhaltet Daten zu verliehenen Fahrradern aus den Jahren 2011 und 2012.\n",
+    "Das vorliegende Datenset beinhaltet Daten zu verliehenen Fahrrädern aus den Jahren 2011 und 2012.\n",
     "\n",
     "Jede der Beobachtungen stellt einen Tag dar."
    ]
@@ -856,7 +856,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Die Variable `season` weist 73 fehlende Werte auf und die Variable `hum` 40 fehlende Werte."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3228,6 +3230,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wie bereits zuvor erkannt, enthalten die Variablen `cnt` und `casual` Ausreißer.\n",
+    "\n",
+    "Diese werden wir uns im Folgenden nochmals genauer ansehen.\n",
+    "\n",
+    "Das Diagramm zeigt einmal die Beziehung zwischen den Variablen `cnt` und `year`. Es ist ersichltich, dass die Ausreißer vor allem im zweiten Jahr auftreten."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -3244,18 +3257,22 @@
     }
    ],
    "source": [
-    "plt.scatter(data['cnt'], data['yr'], c=data['yr'], cmap='viridis')  # Using column_B for color differentiation\n",
+    "plt.scatter(data['cnt'], data['yr'], c=data['yr'], cmap='viridis') \n",
     "\n",
-    "# Add title and labels\n",
-    "plt.title('Scatter Plot with Color Differentiation')\n",
-    "plt.xlabel('Column A')\n",
-    "plt.ylabel('Column B')\n",
+    "plt.title('Beziehung zwischen Count und Year')\n",
+    "plt.xlabel('Count')\n",
+    "plt.ylabel('Year')\n",
     "\n",
-    "# Show color bar\n",
     "plt.colorbar(label='Binary Value')\n",
     "\n",
-    "# Display the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir wenden die `IQR-Methode` an, um die Ausreißer in der Spalte `cnt` zu identifizieren. Zuerst werden das untere und obere Quartil sowie der Interquartilabstand berechnet. Anschließend werden Ausreißer bestimmt, indem Werte außerhalb der Grenzen (1,5-faches IQR über und unter den Quartilen) in einem DataFrame gespeichert und ausgegeben werden."
    ]
   },
   {
@@ -3282,16 +3299,23 @@
     "Q3 = np.percentile(data['cnt'], 75)\n",
     "IQR = Q3 - Q1\n",
     "\n",
-    "# Step 2: Determine outlier bounds\n",
     "lower_bound = Q1 - 1.5 * IQR\n",
     "upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
-    "# Step 3: Identify outliers\n",
     "outliers = pd.DataFrame()\n",
     "outliers['cnt'] = data['cnt'][(data['cnt'] < lower_bound) | (data['cnt'] > upper_bound)]\n",
     "outliers['year'] = data['year'][(data['cnt'] < lower_bound) | (data['cnt'] > upper_bound)]\n",
     "\n",
     "print(\"Outliers:\", outliers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Da der Mittelwert der Spalte `cnt`, wie aus der deskriptiven Statistik in Kapitel 2 erischtlich, 4.714 beträgt d.h. es werden pro Tag durchschnittlich 4.417 Fahhrräder verliehen, können die Ausreißer als fehlerhaft eingestuft werden.\n",
+    "\n",
+    "Es ist schlichtweg unrealistisch, dass an einem Tag 30.000 - 50.000 Fahrräder verliehen werden."
    ]
   }
  ],
