--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -355,8 +355,12 @@
    "metadata": {},
    "source": [
     "Bei Ausreißern im Label eignet sich die lineare Regression nur bedingt. Sind die Werte dennoch realistisch, sollte das Modell entsprechend ausgewählt werden, sodass es möglichst robust im Hinblick auf die Ausreißer ist. \n",
-    "Hierfür ist zwingend Domänenwissen notwendig. In unserem Fall handelt es sich definitiv um unrealistische Werte für die Variable cnt. Bereits in Task 1 konnten wir die Ausreißer identifizieren.\n",
+    "Hierfür ist zwingend Domänenwissen notwendig. \n",
+    "\n",
+    "In unserem Fall handelt es sich definitiv um unrealistische Werte für die Variable `cnt`. Bereits in Task 1 konnten wir die Ausreißer identifizieren.\n",
+    "\n",
     "Da wir in den Test- und Validierungsdaten keine Ausreißer entfernen dürfen, werden wir sie für die weiteren Schritte auch nicht aus den Trainingsdaten entfernen.\n",
+    "\n",
     "Erst im letzten Schritt, der finalen Evaluierung mit Hilfe der Testdaten, werden wir das Modell einmal komplett ohne Ausreißer evaluieren, um die Auswirkungen aufzuzeigen."
    ]
   },
