reworked task 2 together

--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -106,6 +106,16 @@
    "outputs": [],
    "source": [
     "def plot_comparative_bar_charts(df, metrics):\n",
+    "    \"\"\"\n",
+    "    Plot comparative bar charts for the given metrics.\n",
+    "\n",
+    "    Args:\n",
+    "        df: DataFrame with the metrics to compare.\n",
+    "        metrics: List with the metrics to compare.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    num_metrics = len(metrics)\n",
     "    fig, axs = plt.subplots(1, num_metrics, figsize=(5 * num_metrics, 6))\n",
     "\n",
@@ -302,7 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir transformieren die Werte in der Spalte `dteday`."
+    "Wir transformieren die Werte in der Spalte `dteday` in Datumsobjekte.\n",
+    "\n",
+    "Dieser Schritt ist Teil des Data Engineering."
    ]
   },
   {
@@ -359,7 +371,9 @@
     "\n",
     "In unserem Fall handelt es sich definitiv um unrealistische Werte für die Variable `cnt`. Bereits in Task 1 konnten wir die Ausreißer identifizieren.\n",
     "\n",
-    "Da wir in den Test- und Validierungsdaten keine Ausreißer entfernen dürfen, werden wir sie für die weiteren Schritte auch nicht aus den Trainingsdaten entfernen.\n",
+    "Da wir in den Test- und Validierungsdaten keine Ausreißer entfernen dürfen, werden wir sie für die weiteren Schritte auch nicht aus den Trainingsdaten entfernen. \n",
+    "\n",
+    "Die Trainingsdaten sollen so nah wie möglich an den Test- und Validierungsdaten sein.\n",
     "\n",
     "Erst im letzten Schritt, der finalen Evaluierung mit Hilfe der Testdaten, werden wir das Modell einmal komplett ohne Ausreißer evaluieren, um die Auswirkungen aufzuzeigen."
    ]
@@ -521,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die einzelnen Schritte der erzeugten Pipeline werden nacheinander ausgeführt."
+    "Die einzelnen Schritte der Pipeline werden definiert."
    ]
   },
   {
@@ -686,7 +700,7 @@
    "source": [
     "Wie wir bereits in Task 1 erarbeitet haben, weisen die Spalten `season` und `hum` fehlende Werte auf. \n",
     "\n",
-    "Im `minimal_preprocessing` werden alle `NaN` Werte mit durch den `SimpleImputer` durch die Methode `mean` aufgefüllt.\n",
+    "Im `minimal_preprocessing` werden alle `NaN` Werte mit `SimpleImputer` durch die Methode `mean` aufgefüllt.\n",
     "\n",
     "Nun sollen die fehlenden Werte in der Spalte `season` anhand des vorliegenden Datums in der entsprechenden Zeile aufgefüllt werden. "
    ]
@@ -785,7 +799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die der Teilschritt wird im Folgenden der bestehenden Pipeline hinzugefügt."
+    "Der Teilschritt wird im Folgenden der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
@@ -1280,7 +1294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nachdem die Daten korrigiert wurden, ist keine nennenswerte Verbesserung der Preformance Measures zu erkennen."
+    "Nachdem die Daten korrigiert wurden, ist keine Verbesserung der Preformance Measures zu erkennen."
    ]
   },
   {
@@ -1294,7 +1308,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Im nächsten Schritt, Feature Transformation, möchten wir zunächst `One Hot Encoding` auf ausgewählte Varialen anwenden. Im Anschluss normalisieren wir ausgewählte Variablen mit Hilfe eines `StandardScalers`."
+    "Im nächsten Schritt, Feature Transformation, möchten wir zunächst `One Hot Encoding` auf ausgewählte Varialen anwenden. \n",
+    "\n",
+    "Im Anschluss normalisieren wir ausgewählte Variablen mit Hilfe eines `StandardScalers`."
    ]
   },
   {
@@ -2132,7 +2148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Durch das Entfernen von `temp` sehen wir eine leichte Verbesserung der Performance Measures."
+    "Durch das Entfernen von `temp` sehen wir keine Verbesserung der Performance Measures."
    ]
   },
   {
@@ -2474,7 +2490,9 @@
    "source": [
     "Abschließend ist aus den folgenden Diagrammen ersichtlich, wie sich die Performance Measures im Laufe des Data Preparation Prozesses verbessert haben. \n",
     "\n",
-    "Während die Werte für `RMSE` und `MAE` reduziert wurden, haben die Werte für `R-Squared` sowie `Adjusted R-Squared` zugenommen."
+    "Während die Werte für `RMSE` und `MAE` reduziert wurden, haben die Werte für `R-Squared` sowie `Adjusted R-Squared` zugenommen.\n",
+    "\n",
+    "Grund dafür ist, dass die Ausreißer einen wesentlich höheren Einfluss auf die Performance des Modells haben als die durchgeführten Schritte."
    ]
   },
   {
