--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -1656,7 +1656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Normalisierung"
+    "## 4.2 Standardisierung"
    ]
   },
   {
@@ -1665,7 +1665,7 @@
    "source": [
     "Im Folgenden werden die Features mit Hilfe eines ```StandardScalers``` normalisiert, um den Einfluss der Gewichtung einzelner Features aufgrund ihrer Wertebereiche zu eliminiern.\n",
     "\n",
-    "Es ist zu erwarten, dass der Mean Absolute Error durch die Normalisierung geringer wird."
+    "Es ist zu erwarten, dass der Mean Absolute Error durch die Standardisierung geringer wird."
    ]
   },
   {
@@ -1679,7 +1679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir führen die Normalisierung für die Variablen `temp`, `atemp`, `windspeed`, `leaflets` und `hum` durch. Der Teilschritt wird im Anschluss der bestehenden Pipeline hinzugefügt."
+    "Wir führen die Standardisierung für die Variablen `temp`, `atemp`, `windspeed`, `leaflets` und `hum` durch. Der Teilschritt wird im Anschluss der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
