renamed pipeline step standardization

--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -1866,7 +1866,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['Normalization'] = measures"
+    "data['Standardization'] = measures"
    ]
   },
   {
