--- a/project/Introduction-Data-Science-Task-1.ipynb
+++ b/project/Introduction-Data-Science-Task-1.ipynb
@@ -1250,23 +1250,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-9ca80e9fae0d42faa88c118351ced877.vega-embed {\n",
+       "  #altair-viz-31a127a831be44cc8a23bb535db20787.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-9ca80e9fae0d42faa88c118351ced877.vega-embed details,\n",
-       "  #altair-viz-9ca80e9fae0d42faa88c118351ced877.vega-embed details summary {\n",
+       "  #altair-viz-31a127a831be44cc8a23bb535db20787.vega-embed details,\n",
+       "  #altair-viz-31a127a831be44cc8a23bb535db20787.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-9ca80e9fae0d42faa88c118351ced877\"></div>\n",
+       "<div id=\"altair-viz-31a127a831be44cc8a23bb535db20787\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9ca80e9fae0d42faa88c118351ced877\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9ca80e9fae0d42faa88c118351ced877\");\n",
+       "    if (outputDiv.id !== \"altair-viz-31a127a831be44cc8a23bb535db20787\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-31a127a831be44cc8a23bb535db20787\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1426,23 +1426,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3f7fe26285c1480cb395b5abc7091f09.vega-embed {\n",
+       "  #altair-viz-627310968d03488297b913104b7e07aa.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3f7fe26285c1480cb395b5abc7091f09.vega-embed details,\n",
-       "  #altair-viz-3f7fe26285c1480cb395b5abc7091f09.vega-embed details summary {\n",
+       "  #altair-viz-627310968d03488297b913104b7e07aa.vega-embed details,\n",
+       "  #altair-viz-627310968d03488297b913104b7e07aa.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3f7fe26285c1480cb395b5abc7091f09\"></div>\n",
+       "<div id=\"altair-viz-627310968d03488297b913104b7e07aa\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3f7fe26285c1480cb395b5abc7091f09\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3f7fe26285c1480cb395b5abc7091f09\");\n",
+       "    if (outputDiv.id !== \"altair-viz-627310968d03488297b913104b7e07aa\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-627310968d03488297b913104b7e07aa\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1537,27 +1537,30 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cnt                1.000000\n",
-      "casual             0.899574\n",
-      "registered         0.597514\n",
-      "atemp              0.386527\n",
-      "temp               0.383202\n",
-      "yr                 0.372950\n",
-      "season             0.239920\n",
-      "mnth               0.165602\n",
-      "weekday            0.132015\n",
-      "leaflets           0.037202\n",
-      "price reduction    0.023407\n",
-      "workingday        -0.035014\n",
-      "holiday           -0.048014\n",
-      "hum               -0.073123\n",
-      "windspeed         -0.091424\n",
-      "weathersit        -0.191050\n",
-      "Name: cnt, dtype: float64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "cnt                1.000000\n",
+       "casual             0.899574\n",
+       "registered         0.597514\n",
+       "atemp              0.386527\n",
+       "temp               0.383202\n",
+       "yr                 0.372950\n",
+       "season             0.239920\n",
+       "mnth               0.165602\n",
+       "weekday            0.132015\n",
+       "leaflets           0.037202\n",
+       "price reduction    0.023407\n",
+       "workingday        -0.035014\n",
+       "holiday           -0.048014\n",
+       "hum               -0.073123\n",
+       "windspeed         -0.091424\n",
+       "weathersit        -0.191050\n",
+       "Name: cnt, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1566,7 +1569,7 @@
     "\n",
     "sorted_corr_all = corr_all['cnt'].sort_values(ascending=False)\n",
     "\n",
-    "print(sorted_corr_all)"
+    "sorted_corr_all"
    ]
   },
   {
@@ -1622,27 +1625,121 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Variable        VIF\n",
-      "0            season   3.036891\n",
-      "1                yr   2.691856\n",
-      "2              mnth   2.568506\n",
-      "3           holiday   1.092004\n",
-      "4           weekday   1.056378\n",
-      "5        workingday   1.612397\n",
-      "6        weathersit   1.843726\n",
-      "7              temp  62.125273\n",
-      "8             atemp  63.597262\n",
-      "9               hum   1.751811\n",
-      "10        windspeed   1.108836\n",
-      "11         leaflets   1.034525\n",
-      "12  price reduction   1.020514\n",
-      "13           casual   1.159711\n",
-      "14       registered   5.274538\n",
-      "15        intercept  65.509773\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VIF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>season</th>\n",
+       "      <td>3.036891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yr</th>\n",
+       "      <td>2.691856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mnth</th>\n",
+       "      <td>2.568506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>holiday</th>\n",
+       "      <td>1.092004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weekday</th>\n",
+       "      <td>1.056378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>workingday</th>\n",
+       "      <td>1.612397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weathersit</th>\n",
+       "      <td>1.843726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>temp</th>\n",
+       "      <td>62.125273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>atemp</th>\n",
+       "      <td>63.597262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hum</th>\n",
+       "      <td>1.751811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>windspeed</th>\n",
+       "      <td>1.108836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>leaflets</th>\n",
+       "      <td>1.034525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>price reduction</th>\n",
+       "      <td>1.020514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>casual</th>\n",
+       "      <td>1.159711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>registered</th>\n",
+       "      <td>5.274538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>intercept</th>\n",
+       "      <td>65.509773</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       VIF\n",
+       "season            3.036891\n",
+       "yr                2.691856\n",
+       "mnth              2.568506\n",
+       "holiday           1.092004\n",
+       "weekday           1.056378\n",
+       "workingday        1.612397\n",
+       "weathersit        1.843726\n",
+       "temp             62.125273\n",
+       "atemp            63.597262\n",
+       "hum               1.751811\n",
+       "windspeed         1.108836\n",
+       "leaflets          1.034525\n",
+       "price reduction   1.020514\n",
+       "casual            1.159711\n",
+       "registered        5.274538\n",
+       "intercept        65.509773"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1655,10 +1752,10 @@
     "numeric_data['intercept'] = 1.0\n",
     "\n",
     "vif_data = pd.DataFrame()\n",
-    "vif_data[\"Variable\"] = numeric_data.columns\n",
+    "vif_data.index = numeric_data.columns\n",
     "vif_data[\"VIF\"] = [variance_inflation_factor(numeric_data.values, i) for i in range(numeric_data.shape[1])]\n",
     "\n",
-    "print(vif_data)"
+    "vif_data"
    ]
   },
   {
